--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react": "^16.13.1",
     "react-chartjs-2": "^2.10.0",
     "react-dom": "^16.13.1",
-    "react-ga": "^3.1.2",
+    "react-ga-gtm": "^2.5.3-beta",
     "react-scripts": "3.4.3"
   },
   "scripts": {
